feat: chamando API do gemini para resposta da IA